Update first example projects CCS

--- a/Tiva/.gitignore
+++ b/Tiva/.gitignore
@@ -15,4 +15,13 @@
 **/Obj/*.pbd  
 **/Obj/*.pbd.*  
 **/Obj/*.pbi  
-**/Obj/*.pbi.*  
+**/Obj/*.pbi.*
+
+# CCS
+**/Release/*
+**/.xdchelp
+**/config/*
+**/.launches/*
+**/.jxbrowser-data/* 
+
+
