include GNU compiler and CMSIS usage

--- a/Tiva/CCS/3_GNU_ARM_COMPILER/.project
+++ b/Tiva/CCS/3_GNU_ARM_COMPILER/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>3_Structures_CMSIS</name>
+	<name>3_GNU_ARM_COMPILER</name>
 	<comment></comment>
 	<projects>
 	</projects>
