--- a/Tiva/CCS/X_usb_dev_delee_TI_comp/.project
+++ b/Tiva/CCS/X_usb_dev_delee_TI_comp/.project
@@ -33,12 +33,12 @@
 		<link>
 			<name>utils/uartstdio.c</name>
 			<type>1</type>
-			<locationURI>SW_ROOT/utils/uartstdio.c</locationURI>
+			<locationURI>PARENT-4-PROJECT_LOC/LIB_ARM/utils/uartstdio.c</locationURI>
 		</link>
 		<link>
 			<name>utils/ustdlib.c</name>
 			<type>1</type>
-			<locationURI>SW_ROOT/utils/ustdlib.c</locationURI>
+			<locationURI>PARENT-4-PROJECT_LOC/LIB_ARM/utils/ustdlib.c</locationURI>
 		</link>
 	</linkedResources>
 	<variableList>
