--- a/Tiva/CCS/10_Nextion/.project
+++ b/Tiva/CCS/10_Nextion/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>7_Hello_TI_library</name>
+	<name>10_Nextion</name>
 	<comment></comment>
 	<projects>
 	</projects>
