--- a/Tiva/CCS/7_Hello_TI_library/.project
+++ b/Tiva/CCS/7_Hello_TI_library/.project
@@ -24,4 +24,16 @@
 		<nature>org.eclipse.cdt.core.ccnature</nature>
 		<nature>org.eclipse.cdt.managedbuilder.core.ScannerConfigNature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>uartstdio.c</name>
+			<type>1</type>
+			<locationURI>PARENT-4-PROJECT_LOC/LIB_ARM/utils/uartstdio.c</locationURI>
+		</link>
+		<link>
+			<name>uartstdio.h</name>
+			<type>1</type>
+			<locationURI>PARENT-4-PROJECT_LOC/LIB_ARM/utils/uartstdio.h</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
